--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <button id="enable-sound" data-i18n="enable">Enable sound</button>
   <button id="mute-btn" data-i18n="mute">Mute</button>
 </div>
+  <div id="ad-slot-1" style="width: 300px; height: 250px; margin: 20px auto;"></div>
+<div id="ad-slot-2" style="width: 300px; height: 250px; margin: 20px auto;"></div>
+<div id="ad-slot-3" style="width: 728px; height: 90px; margin: 20px auto;"></div>
 <body>
   <div class="container">
     <h1 data-i18n="title">Time left in Donald Trump’s presidency</h1>
