--- a/index.html
+++ b/index.html
@@ -28,5 +28,12 @@
   </div>
   <script src="/js/countdown.js"></script>
   <script src="/js/i18n.js"></script>
+  <div class="theme-toggle">
+  <select onchange="setTheme(this.value)">
+    <option value="auto">Auto</option>
+    <option value="dark">Dark</option>
+    <option value="light">Light</option>
+  </select>
+</div>
 </body>
 </html>
