--- a/index.html
+++ b/index.html
@@ -1,39 +1,79 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Presidency Clock</title>
-  <link rel="stylesheet" href="/css/style.css">
-</head>
-  <div class="controls">
-  <select class="lang-switch" onchange="changeLang(this.value)">
-    <option value="en">English</option>
-    <option value="uk">Українська</option>
-    <option value="es">Español</option>
-    <option value="fr">Français</option>
-    <option value="de">Deutsch</option>
-  </select>
-  <button id="enable-sound" data-i18n="enable">Enable sound</button>
-  <button id="mute-btn" data-i18n="mute">Mute</button>
-</div>
-  <div id="ad-slot-1" style="width: 300px; height: 250px; margin: 20px auto;"></div>
-<div id="ad-slot-2" style="width: 300px; height: 250px; margin: 20px auto;"></div>
-<div id="ad-slot-3" style="width: 728px; height: 90px; margin: 20px auto;"></div>
-<body>
-  <div class="container">
-    <h1 data-i18n="title">Time left in Donald Trump’s presidency</h1>
-    <div class="clock" id="countdown"></div>
-    <p data-i18n="sub">U.S. presidential terms end at 12:00 noon ET on January 20.</p>
-  </div>
-  <script src="/js/countdown.js"></script>
-  <script src="/js/i18n.js"></script>
-  <div class="theme-toggle">
-  <select onchange="setTheme(this.value)">
-    <option value="auto">Auto</option>
-    <option value="dark">Dark</option>
-    <option value="light">Light</option>
-  </select>
-</div>
-</body>
-</html>
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  background: linear-gradient(135deg, #f5f5f5, #e0e0e0);
+  color: #333;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: all 0.3s;
+}
+body.dark {
+  background: linear-gradient(135deg, #1a1a1a, #2a2a2a);
+  color: #fff;
+}
+.container {
+  padding: 20px;
+  max-width: 800px;
+}
+h1 {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+}
+.clock {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin: 20px 0;
+}
+.clock div {
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.8em;
+  color: #007aff;
+}
+.clock div span {
+  font-size: 0.6em;
+  color: #666;
+}
+.controls {
+  margin: 20px 0;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+select, button {
+  padding: 8px 12px;
+  font-size: 1em;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background: #fff;
+  cursor: pointer;
+}
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+@media (max-width: 600px) {
+  .clock div {
+    width: 60px;
+    height: 60px;
+    font-size: 1.2em;
+  }
+  .container {
+    padding: 10px;
+  }
+  .controls {
+    flex-direction: column;
+    gap: 5px;
+  }
+}
