--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Presidency Clock</title>
-  <meta name="description" content="Countdown timer showing how much time is left for Donald Trump in office. Includes news digest and presidential data.">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Шапка -->
-  <header>
+<header>
+  <h1 id="site-title">How much time does Donald Trump have left as president?</h1>
+  <div class="controls">
+    <button id="theme-toggle">🌓</button>
+    <select id="language-select">
+      <option value="en">EN</option>
+      <option value="uk">UA</option>
+      <option value="es">ES</option>
+      <option value="fr">FR</option>
+      <option value="de">DE</option>
+      <option value="it">IT</option>
+      <option value="zh">中文</option>
+      <option value="ja">日本語</option>
+    </select>
+  </div>
+</header>
     <h1 id="site-title">Presidency Clock</h1>
     <div class="controls">
       <button id="theme-toggle">🌓</button>
