--- a/trump-today.html
+++ b/trump-today.html
@@ -6,23 +6,30 @@
   <title data-i18n-head="trump-today-title">Main about Trump today — Presidency Clock</title>
   <meta name="description" content="Daily headline about Donald Trump selected by AI based on engagement. Archive of top stories." />
   <link rel="stylesheet" href="style.css" />
+
+  <!-- SEO -->
+  <link rel="canonical" href="https://YOUR_DOMAIN/trump-today.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Main about Trump today — Presidency Clock" />
+  <meta property="og:description" content="AI-picked daily headline about Trump with short summary and archive." />
+  <meta property="og:url" content="https://YOUR_DOMAIN/trump-today.html" />
+  <meta property="og:image" content="https://YOUR_DOMAIN/og-image.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Main about Trump today — Presidency Clock" />
+  <meta name="twitter:description" content="Top Trump story of the day, with archive." />
+  <meta name="twitter:image" content="https://YOUR_DOMAIN/og-image.jpg" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <h1 data-i18n="trump-today">Main about Trump today</h1>
       <div class="controls">
-        <button id="theme-toggle" class="icon-btn" aria-label="Toggle theme" title="Toggle theme">🌓</button>
+        <button id="theme-toggle" class="icon-btn" aria-label="Toggle theme">🌓</button>
         <label class="visually-hidden" for="language-select">Language</label>
         <select id="language-select" aria-label="Language select">
-          <option value="en">EN</option>
-          <option value="uk">UA</option>
-          <option value="es">ES</option>
-          <option value="fr">FR</option>
-          <option value="de">DE</option>
-          <option value="it">IT</option>
-          <option value="zh">中文</option>
-          <option value="ja">日本語</option>
+          <option value="en">EN</option><option value="uk">UA</option><option value="es">ES</option>
+          <option value="fr">FR</option><option value="de">DE</option><option value="it">IT</option>
+          <option value="zh">中文</option><option value="ja">日本語</option>
         </select>
       </div>
     </div>
@@ -49,14 +56,21 @@
         <a href="privacy.html" data-i18n="privacy">Privacy Policy</a>
         <span aria-hidden="true">·</span>
         <a href="contact.html" data-i18n="contact">Contact</a>
+        <span aria-hidden="true">·</span>
+        <a href="#" onclick="pcOpenConsent();return false;">Manage cookies</a>
       </p>
       <p class="muted small">© <span id="year"></span> Presidency Clock</p>
     </div>
   </footer>
 
   <script src="script.js"></script>
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  <script
+    src="monetization.js"
+    data-ga="G-XXXXXXXXXX"
+    data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
+    data-slot-top="0000000001"
+    data-slot-infeed="0000000002"
+    data-slot-side="0000000003"></script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
