--- a/trump-today.html
+++ b/trump-today.html
@@ -5,19 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title data-i18n-head="trump-today-title">Main about Trump today — Presidency Clock</title>
   <meta name="description" content="Daily headline about Donald Trump selected by AI based on engagement. Archive of top stories." />
-  <link rel="stylesheet" href="style.css" />
 
-  <!-- SEO -->
-  <link rel="canonical" href="https://YOUR_DOMAIN/trump-today.html" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Main about Trump today — Presidency Clock" />
-  <meta property="og:description" content="AI-picked daily headline about Trump with short summary and archive." />
-  <meta property="og:url" content="https://YOUR_DOMAIN/trump-today.html" />
-  <meta property="og:image" content="https://YOUR_DOMAIN/og-image.jpg" />
+  <meta property="og:description" content="Daily AI-picked Trump headline with short summary and archive." />
+  <meta property="og:url" content="https://presidencyclock.com/trump-today.html" />
+  <meta property="og:image" content="https://presidencyclock.com/og-image.jpg" />
+
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Main about Trump today — Presidency Clock" />
-  <meta name="twitter:description" content="Top Trump story of the day, with archive." />
-  <meta name="twitter:image" content="https://YOUR_DOMAIN/og-image.jpg" />
+  <meta name="twitter:description" content="Daily AI-picked Trump headline with archive." />
+  <meta name="twitter:image" content="https://presidencyclock.com/og-image.jpg" />
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="site-header">
@@ -25,8 +25,7 @@
       <h1 data-i18n="trump-today">Main about Trump today</h1>
       <div class="controls">
         <button id="theme-toggle" class="icon-btn" aria-label="Toggle theme">🌓</button>
-        <label class="visually-hidden" for="language-select">Language</label>
-        <select id="language-select" aria-label="Language select">
+        <select id="language-select" aria-label="Language">
           <option value="en">EN</option><option value="uk">UA</option><option value="es">ES</option>
           <option value="fr">FR</option><option value="de">DE</option><option value="it">IT</option>
           <option value="zh">中文</option><option value="ja">日本語</option>
@@ -37,11 +36,9 @@
 
   <main class="container">
     <section class="card">
-      <p class="muted small" id="archive-note" data-i18n="archive-note">
-        Top daily headline picked by AI. Below is the recent archive.
-      </p>
+      <p class="muted small" id="archive-note" data-i18n="archive-note">Top daily headline picked by AI. Below is the recent archive.</p>
       <div id="trump-today-latest" class="stack" style="margin-bottom:1rem;"></div>
-      <hr style="border:none; border-top:1px solid var(--card-border); margin:1rem 0;">
+      <hr style="border:none;border-top:1px solid var(--card-border);margin:1rem 0;">
       <div id="trump-today-archive" class="stack"></div>
     </section>
   </main>
@@ -49,14 +46,10 @@
   <footer class="site-footer">
     <div class="container">
       <p class="footer-links">
-        <a href="index.html" data-i18n="home">Home</a>
-        <span aria-hidden="true">·</span>
-        <a href="about.html" data-i18n="about">About Us</a>
-        <span aria-hidden="true">·</span>
-        <a href="privacy.html" data-i18n="privacy">Privacy Policy</a>
-        <span aria-hidden="true">·</span>
-        <a href="contact.html" data-i18n="contact">Contact</a>
-        <span aria-hidden="true">·</span>
+        <a href="index.html" data-i18n="home">Home</a> ·
+        <a href="about.html" data-i18n="about">About Us</a> ·
+        <a href="privacy.html" data-i18n="privacy">Privacy Policy</a> ·
+        <a href="contact.html" data-i18n="contact">Contact</a> ·
         <a href="#" onclick="pcOpenConsent();return false;">Manage cookies</a>
       </p>
       <p class="muted small">© <span id="year"></span> Presidency Clock</p>
@@ -70,7 +63,8 @@
     data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
     data-slot-top="0000000001"
     data-slot-infeed="0000000002"
-    data-slot-side="0000000003"></script>
+    data-slot-side="0000000003">
+  </script>
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
