--- a/digest.html
+++ b/digest.html
@@ -5,6 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>News Digest — Presidency Clock</title>
   <meta name="description" content="AI-updated news digest about US politics and Trump. Updated several times a day with headlines, summaries and sources." />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="News Digest — Presidency Clock" />
+  <meta property="og:description" content="AI-updated headlines with 4–5 sentence summaries and sources." />
+  <meta property="og:url" content="https://presidencyclock.com/digest.html" />
+  <meta property="og:image" content="https://presidencyclock.com/og-image.jpg" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="News Digest — Presidency Clock" />
+  <meta name="twitter:description" content="Digest updated several times a day." />
+  <meta name="twitter:image" content="https://presidencyclock.com/og-image.jpg" />
+
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,14 +26,9 @@
       <div class="controls">
         <button id="theme-toggle" class="icon-btn" aria-label="Toggle theme">🌓</button>
         <select id="language-select" aria-label="Language">
-          <option value="en">EN</option>
-          <option value="uk">UA</option>
-          <option value="es">ES</option>
-          <option value="fr">FR</option>
-          <option value="de">DE</option>
-          <option value="it">IT</option>
-          <option value="zh">中文</option>
-          <option value="ja">日本語</option>
+          <option value="en">EN</option><option value="uk">UA</option><option value="es">ES</option>
+          <option value="fr">FR</option><option value="de">DE</option><option value="it">IT</option>
+          <option value="zh">中文</option><option value="ja">日本語</option>
         </select>
       </div>
     </div>
@@ -29,9 +36,7 @@
 
   <main class="container">
     <section class="card">
-      <p class="muted small" id="digest-note">
-        Updated several times a day. Headlines, 4–5 sentence summaries, and links to sources.
-      </p>
+      <p class="muted small" id="digest-note">Updated several times a day. Headlines, 4–5 sentence summaries, and links to sources.</p>
       <div id="digest-list" class="stack"></div>
     </section>
   </main>
@@ -39,21 +44,25 @@
   <footer class="site-footer">
     <div class="container">
       <p class="footer-links">
-        <a href="index.html" data-i18n="home">Home</a>
-        <span aria-hidden="true">·</span>
-        <a href="about.html" data-i18n="about">About Us</a>
-        <span aria-hidden="true">·</span>
-        <a href="privacy.html" data-i18n="privacy">Privacy Policy</a>
-        <span aria-hidden="true">·</span>
-        <a href="contact.html" data-i18n="contact">Contact</a>
+        <a href="index.html" data-i18n="home">Home</a> ·
+        <a href="about.html" data-i18n="about">About Us</a> ·
+        <a href="privacy.html" data-i18n="privacy">Privacy Policy</a> ·
+        <a href="contact.html" data-i18n="contact">Contact</a> ·
+        <a href="#" onclick="pcOpenConsent();return false;">Manage cookies</a>
       </p>
       <p class="muted small">© <span id="year"></span> Presidency Clock</p>
     </div>
   </footer>
 
   <script src="script.js"></script>
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
+  <script
+    src="monetization.js"
+    data-ga="G-XXXXXXXXXX"
+    data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
+    data-slot-top="0000000001"
+    data-slot-infeed="0000000002"
+    data-slot-side="0000000003">
   </script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
